--- a/mirror.conf
+++ b/mirror.conf
@@ -1,6 +1,5 @@
-# TermuxForLinux 镜像源配置文件
+# 镜像源
 # 格式: {distro}-mirror = {URL}
-
 # Ubuntu 镜像源
 ubuntu-mirror = https://mirrors.ustc.edu.cn/ubuntu/
 
@@ -15,3 +14,8 @@ centos-mirror = https://mirrors.aliyun.com/centos/
 
 # Fedora 镜像源
 fedora-mirror = https://mirrors.tuna.tsinghua.edu.cn/fedora/
+
+# 下载源
+# 格式: {distro}-link = {URL}
+# 码云
+ubuntu-distro = https://gitee.com/sqlsec/termux-ubuntu.git
