--- a/mirror.conf
+++ b/mirror.conf
@@ -18,4 +18,4 @@ fedora-mirror = https://mirrors.tuna.tsinghua.edu.cn/fedora/
 # 下载源
 # 格式: {distro}-link = {URL}
 # 码云
-ubuntu-distro = https://gitee.com/sqlsec/termux-ubuntu.git
+ubuntu-link = https://gitee.com/sqlsec/termux-ubuntu.git
