--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "A Rust port of TermuxForLinux - Install and run Linux distributio
 
 [dependencies]
 toml = "0.8"
+chrono = "0.4"
 
 [dev-dependencies]
 tempfile = "3.8"
